--- a/tribute-page/style.css
+++ b/tribute-page/style.css
@@ -2,8 +2,7 @@ body, *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-    
+    font-family: 'Poppins', sans-serif;    
 }
 
 p, li, a{
@@ -13,6 +12,8 @@ p, li, a{
 .container{
     width: 100%;
     height: auto;
+    background-color: #eee;
+    position: absolute;
 }
 
 .outer-div{
